--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-store",
   "version": "0.1.0",
+  "author": "Timur Rakhimullin @Traximullin && Eugene Litvyak @drainar09560",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -10,6 +11,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
